# cweb

./: .gitignore  CMakeLists.txt  README.md  myfile.txt  run.sh  setupenv.sh
include/: constants.h  fileServer.c  server.c  server.h  stringUtils.h
include/fileHandler/: fileHandler.c  fileHandler.h
include/httpParser/: httpParser.c  httpParser.h
include/server/: server.c  server.h
pages/: home copy.html  home.html  index.html
src/: main.c  server.c
